2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (additionalItemLabelGenerator): New field,
    (YIntervalRenderer): Initialise new field,
    (getAdditionalItemLabelGenerator): New method,
    (setAdditionalItemLabelGenerator): Likewise,
    (drawItem): Added additional item label support,
    (drawAdditionalItemLabel): New method,
    (equals): Include new field.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
    (tickLength): New field,
    (HighLowRenderer): Initialise tickLength,
    (getTickLength): New method,
    (setTickLength): Likewise,
    (findRangeBounds): New method override,
    (drawItem): Use new tickLength field,
    (equals): Check new field.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/IntervalXYItemLabelGenerator.java: 
    New class.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/AbstractXYItemLabelGenerator.java
    (nullXString): Removed,
    (getNullYString): New method,
    (createItemArray): Removed redundant code,
    (equals): Check nullYString field,
    (hashCode): Implemented.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java:
    Renamed XYSplineRenderer.java.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java
    (getSeries): Changed argument from String to Comparable.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Millisecond.java
    (compareTo): Added handling for general RegularTimePeriod.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimePeriodValue.java
    (toString): New method override,