@@ -1,3 +1,8 @@
+2006-06-17  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/util/ShapeList.java
+    (equals): Reimplemented.
+
 2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
